Fix avatar alignment in the detail view.

--- a/Evergreen/Resources/styleSheet.css
+++ b/Evergreen/Resources/styleSheet.css
@@ -71,12 +71,10 @@ a:hover {
 }
 .avatar img {
 	border-radius: 7px;
-	margin-right: 8px;
 }
 .headerContainer a:link, .headerContainer a:visited {
 	color: rgba(0, 0, 0, 0.3);
 }
-
 .feedIcon {
 	border-radius: 5px;
 }
